# python-project-49

./: README.md  pyproject.toml  sys
brain_games/: cli.py  even_and_odd.py
brain_games/scripts/: brain_even.py  brain_games.py
