
[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Olivia_Shch <dvekozyavki@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
